--- a/src/css/swiper.css
+++ b/src/css/swiper.css
@@ -1,7 +1,6 @@
 .swiper {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 .swiper-slide {
   width: 80vw;
